[gd_scene load_steps=2 format=3 uid="uid://26lcxxgs5c3g"]

[ext_resource type="Script" path="res://scenes/terminal/apps/settings.gd" id="1_npsbc"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_npsbc")

[node name="Tabs" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Audio" type="TabBar" parent="Tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Tabs/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="Tabs/Audio/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Tabs/Audio/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Output" type="Label" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
text = "Output Device:"

[node name="OutputOptions" type="OptionButton" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
item_count = 1
popup/item_0/text = "Test"

[node name="MasterVolLbl" type="Label" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Master Volume:"

[node name="MasterVolSlider" type="HSlider" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="MusicVolLbl" type="Label" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music Volume:"

[node name="MusicVolSlider" type="HSlider" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="SfxVolLbl" type="Label" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX Volume:"

[node name="SfxVolSlider" type="HSlider" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="AmbientVolLbl" type="Label" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Ambient Volume:"

[node name="AmbientVolSlider" type="HSlider" parent="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[connection signal="drag_ended" from="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/MasterVolSlider" to="." method="_on_master_vol_slider_drag_ended"]
[connection signal="drag_ended" from="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/MusicVolSlider" to="." method="_on_music_vol_slider_drag_ended"]
[connection signal="drag_ended" from="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/SfxVolSlider" to="." method="_on_sfx_vol_slider_drag_ended"]
[connection signal="drag_ended" from="Tabs/Audio/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/AmbientVolSlider" to="." method="_on_ambient_vol_slider_drag_ended"]
